--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
         <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+        <link rel="stylesheet" href="style.css">
         <title>Keeper</title>
     </head>
     <body>
