--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <title>Keeper</title>
     </head>
     <body>
-        <h1>Keeper</h1>
+        <h1 id="title">Keeper</h1>
         <ul id="fileList"></ul>
     </body>
 </html>
